🚨 CRITICAL FIXES: Resolve all blocking issues
Critical Fixes Applied:
✅ Fix hardcoded Supabase credentials in supabase.ts
✅ Fix authentication flow infinite loading issues  
✅ Fix button click event handling problems
✅ Fix WebSocket connection and error handling
✅ Enhanced environment variable configuration
✅ Updated setup documentation with step-by-step instructions

Breaking Changes Fixed:
- Removed hardcoded Supabase URLs pointing to wrong project
- Fixed preventDefault() calls preventing form submissions
- Added proper token validation for Gemini Live connections
- Improved error messages and user feedback

All applications should now work properly when configured with user's own:
- Supabase project credentials
- Gemini API key  
- Fal.ai API key
- Proper database migrations and edge functions

See SETUP.md for complete configuration instructions.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,31 @@
-# Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Frontend Environment Variables (for Vite)
+# Copy this file to .env.local and fill in your actual values
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Backend Environment Variables (Set in Supabase Dashboard)
-# These should be set as secrets in your Supabase project:
-# GEMINI_API_KEY=your_gemini_api_key
-# FAL_API_KEY=your_fal_api_key
-# SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# Backend Environment Variables (for Supabase Edge Functions)
+# ⚠️  IMPORTANT: Set these in your Supabase Dashboard → Settings → Environment Variables
+# DO NOT put these in .env.local - they should only be set in Supabase Dashboard
+
+# Gemini API Configuration
+# Get your API key from: https://makersuite.google.com/app/apikey
+# GEMINI_API_KEY=your_gemini_api_key_here
+
+# Fal.ai Configuration  
+# Get your API key from: https://fal.ai/dashboard
+# FAL_API_KEY=your_fal_api_key_here
+
+# Supabase Service Configuration
+# Get from Supabase Dashboard → Settings → API → service_role secret
+# SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # Development
 NODE_ENV=development
+
+# Instructions:
+# 1. Create a new Supabase project at https://supabase.com/dashboard
+# 2. Copy this file to .env.local in your project root
+# 3. Replace VITE_* values with your Supabase project credentials
+# 4. Set the backend environment variables in Supabase Dashboard (not in .env.local)
+# 5. Deploy the edge functions and run the database migrations
+# 6. Get API keys for Gemini and Fal.ai services
